crates/friction-cli/tests/snapshots/snapshot__check_json__blog_human_016b54b46d29feb8.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "blog",
  "family": "qwen",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 21.53731343283582,
      "lo": 7.222222222222222,
      "hi": 22.612244897959183,
      "in_envelope": true
    },
    {
      "name": "sentence_length_stddev",
      "value": 9.76336184791907,
      "lo": 6.710643999484348,
      "hi": 12.69937026747041,
      "in_envelope": true
    },
    {
      "name": "sentence_length_cv",
      "value": 0.4533231072838376,
      "lo": 0.49754649007902846,
      "hi": 1.1375256187963048,
      "in_envelope": false
    },
    {
      "name": "discourse_marker_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 2.8618152085036797,
      "in_envelope": true
    },
    {
      "name": "triad_rate",
      "value": 0.029850746268656716,
      "lo": 0.0,
      "hi": 0.08695652173913043,
      "in_envelope": true
    },
    {
      "name": "contraction_ratio",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.7307692307692307,
      "in_envelope": true
    },
    {
      "name": "bullet_parallelism",
      "value": 0.0,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 2.310344827586207,
      "lo": 1.1640625,
      "hi": 3.5384615384615383,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.4836373655528254,
      "lo": 0.38580860691983426,
      "hi": 0.7953949089757174,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 2.079002079002079,
      "lo": 0.0,
      "hi": 4.244482173174872,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 1.386001386001386,
      "lo": 0.0,
      "hi": 3.4199726402188784,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.023076923076923078,
      "in_envelope": true
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.009259259259259259,
      "in_envelope": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 6.177076183939602,
      "lo": 0.922509225092251,
      "hi": 19.31200965600483,
      "in_envelope": true
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 22.649279341111875,
      "lo": 11.149228130360205,
      "hi": 39.260969976905315,
      "in_envelope": true
    },
    {
      "name": "heading_density",
      "value": 0.6863417982155113,
      "lo": 0.607164541590771,
      "hi": 10.36682615629984,
      "in_envelope": true
    },
    {
      "name": "list_item_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 16.82439537329127,
      "in_envelope": true
    },
    {
      "name": "bold_span_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 10.668163952835485,
      "in_envelope": true
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.06060606060606061,
      "lo": 0.006711409395973154,
      "hi": 0.13432835820895522,
      "in_envelope": true
    },
    {
      "name": "top_opener_concentration",
      "value": 0.1044776119402985,
      "lo": 0.058823529411764705,
      "hi": 0.2153846153846154,
      "in_envelope": true
    }
  ],
  "spans": [
    {
      "channel": "literal",
      "frame_id": "sub.leverage_3sg",
      "start": 7459,
      "end": 7468,
      "line": 47,
      "column": 118,
      "score": null
    }
  ],
  "tell_counts": {
    "sub": 1
  },
  "dms": [
    {
      "family": "qwen",
      "mean_machine": 1.0533584431889516,
      "mean_human": 32.56497175141243,
      "differential": -31.511613308223478,
      "token_count": 1593
    },
    {
      "family": "gemma",
      "mean_machine": 1.1644695543000627,
      "mean_human": 32.56497175141243,
      "differential": -31.400502197112367,
      "token_count": 1593
    },
    {
      "family": "llama",
      "mean_machine": 1.1249215317011927,
      "mean_human": 32.56497175141243,
      "differential": -31.440050219711235,
      "token_count": 1593
    },
    {
      "family": "granite",
      "mean_machine": 1.061519146264909,
      "mean_human": 32.56497175141243,
      "differential": -31.50345260514752,
      "token_count": 1593
    },
    {
      "family": "claude",
      "mean_machine": 1.2121782799748901,
      "mean_human": 32.56497175141243,
      "differential": -31.35279347143754,
      "token_count": 1593
    }
  ]
}
