crates/friction-cli/tests/snapshots/snapshot__check_json__blog_llm_152f7fa1159f4910.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "blog",
  "family": "qwen",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 13.095238095238095,
      "lo": 7.222222222222222,
      "hi": 22.612244897959183,
      "in_envelope": true
    },
    {
      "name": "sentence_length_stddev",
      "value": 7.722805407104926,
      "lo": 6.710643999484348,
      "hi": 12.69937026747041,
      "in_envelope": true
    },
    {
      "name": "sentence_length_cv",
      "value": 0.5897415038152852,
      "lo": 0.49754649007902846,
      "hi": 1.1375256187963048,
      "in_envelope": true
    },
    {
      "name": "discourse_marker_density",
      "value": 4.744958481613286,
      "lo": 0.0,
      "hi": 2.8618152085036797,
      "in_envelope": false
    },
    {
      "name": "triad_rate",
      "value": 0.015873015873015872,
      "lo": 0.0,
      "hi": 0.08695652173913043,
      "in_envelope": true
    },
    {
      "name": "contraction_ratio",
      "value": 0.3333333333333333,
      "lo": 0.0,
      "hi": 0.7307692307692307,
      "in_envelope": true
    },
    {
      "name": "bullet_parallelism",
      "value": 0.8125,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.4651162790697674,
      "lo": 1.1640625,
      "hi": 3.5384615384615383,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.49588886831153367,
      "lo": 0.38580860691983426,
      "hi": 0.7953949089757174,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 4.244482173174872,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 3.4199726402188784,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.1111111111111111,
      "lo": 0.0,
      "hi": 0.023076923076923078,
      "in_envelope": false
    },
    {
      "name": "not_just_but_rate",
      "value": 0.015873015873015872,
      "lo": 0.0,
      "hi": 0.009259259259259259,
      "in_envelope": false
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.023255813953488372,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": false
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 47.44958481613286,
      "lo": 0.922509225092251,
      "hi": 19.31200965600483,
      "in_envelope": false
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 13.048635824436536,
      "lo": 11.149228130360205,
      "hi": 39.260969976905315,
      "in_envelope": true
    },
    {
      "name": "heading_density",
      "value": 8.303677342823251,
      "lo": 0.607164541590771,
      "hi": 10.36682615629984,
      "in_envelope": true
    },
    {
      "name": "list_item_density",
      "value": 18.979833926453143,
      "lo": 0.0,
      "hi": 16.82439537329127,
      "in_envelope": false
    },
    {
      "name": "bold_span_density",
      "value": 28.469750889679716,
      "lo": 0.0,
      "hi": 10.668163952835485,
      "in_envelope": false
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.06451612903225806,
      "lo": 0.006711409395973154,
      "hi": 0.13432835820895522,
      "in_envelope": true
    },
    {
      "name": "top_opener_concentration",
      "value": 0.07936507936507936,
      "lo": 0.058823529411764705,
      "hi": 0.2153846153846154,
      "in_envelope": true
    }
  ],
  "spans": [
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 79,
      "end": 499,
      "line": 3,
      "column": 1,
      "score": 2303
    },
    {
      "channel": "literal",
      "frame_id": "sub.is_crucial",
      "start": 287,
      "end": 297,
      "line": 3,
      "column": 207,
      "score": null
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 518,
      "end": 928,
      "line": 7,
      "column": 1,
      "score": 2554
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 948,
      "end": 1164,
      "line": 11,
      "column": 1,
      "score": 537
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 1187,
      "end": 1374,
      "line": 14,
      "column": 5,
      "score": 390
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 1379,
      "end": 1540,
      "line": 15,
      "column": 5,
      "score": 309
    },
    {
      "channel": "literal",
      "frame_id": "sub.is_crucial",
      "start": 1464,
      "end": 1474,
      "line": 15,
      "column": 90,
      "score": null
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 1557,
      "end": 1724,
      "line": 18,
      "column": 5,
      "score": 376
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 1729,
      "end": 1876,
      "line": 19,
      "column": 5,
      "score": 211
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 1878,
      "end": 2128,
      "line": 21,
      "column": 1,
      "score": 675
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 2167,
      "end": 2294,
      "line": 25,
      "column": 1,
      "score": 142
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 2316,
      "end": 2476,
      "line": 28,
      "column": 5,
      "score": 270
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 2481,
      "end": 2695,
      "line": 29,
      "column": 5,
      "score": 363
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 2712,
      "end": 2886,
      "line": 32,
      "column": 5,
      "score": 362
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 2891,
      "end": 3030,
      "line": 33,
      "column": 5,
      "score": 143
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 3032,
      "end": 3208,
      "line": 35,
      "column": 1,
      "score": 318
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 3228,
      "end": 3407,
      "line": 39,
      "column": 1,
      "score": 359
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 3429,
      "end": 3603,
      "line": 42,
      "column": 5,
      "score": 281
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 3608,
      "end": 3811,
      "line": 43,
      "column": 5,
      "score": 405
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 3828,
      "end": 3953,
      "line": 46,
      "column": 5,
      "score": 241
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 3958,
      "end": 4131,
      "line": 47,
      "column": 5,
      "score": 430
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 4133,
      "end": 4440,
      "line": 49,
      "column": 1,
      "score": 1054
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 4468,
      "end": 4613,
      "line": 53,
      "column": 1,
      "score": 300
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 4635,
      "end": 4750,
      "line": 56,
      "column": 5,
      "score": 170
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 4755,
      "end": 4864,
      "line": 57,
      "column": 5,
      "score": 123
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 4881,
      "end": 5057,
      "line": 60,
      "column": 5,
      "score": 435
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 5062,
      "end": 5225,
      "line": 61,
      "column": 5,
      "score": 330
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 5227,
      "end": 5455,
      "line": 63,
      "column": 1,
      "score": 677
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 5474,
      "end": 5861,
      "line": 67,
      "column": 1,
      "score": 2162
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 5863,
      "end": 6171,
      "line": 69,
      "column": 1,
      "score": 1240
    },
    {
      "channel": "lvc",
      "frame_id": "lvc.decision",
      "start": 5952,
      "end": 5969,
      "line": 69,
      "column": 90,
      "score": null
    }
  ],
  "tell_counts": {
    "dms": 28,
    "lvc": 1,
    "sub": 2
  },
  "dms": [
    {
      "family": "qwen",
      "mean_machine": 20.004259850905218,
      "mean_human": 1.6283280085197018,
      "differential": 18.375931842385516,
      "token_count": 939
    },
    {
      "family": "gemma",
      "mean_machine": 1.5686900958466454,
      "mean_human": 1.6283280085197018,
      "differential": -0.059637912673056404,
      "token_count": 939
    },
    {
      "family": "llama",
      "mean_machine": 1.6166134185303513,
      "mean_human": 1.6283280085197018,
      "differential": -0.011714589989350488,
      "token_count": 939
    },
    {
      "family": "granite",
      "mean_machine": 1.321618743343983,
      "mean_human": 1.6283280085197018,
      "differential": -0.30670926517571884,
      "token_count": 939
    }
  ]
}
