crates/friction-cli/tests/snapshots/snapshot__check_json__blog_llm_19f12335d308d0e0.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "blog",
  "family": "qwen",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 14.149253731343284,
      "lo": 7.222222222222222,
      "hi": 22.612244897959183,
      "in_envelope": true
    },
    {
      "name": "sentence_length_stddev",
      "value": 7.955573905099558,
      "lo": 6.710643999484348,
      "hi": 12.69937026747041,
      "in_envelope": true
    },
    {
      "name": "sentence_length_cv",
      "value": 0.5622610249384709,
      "lo": 0.49754649007902846,
      "hi": 1.1375256187963048,
      "in_envelope": true
    },
    {
      "name": "discourse_marker_density",
      "value": 3.2119914346895073,
      "lo": 0.0,
      "hi": 2.8618152085036797,
      "in_envelope": false
    },
    {
      "name": "triad_rate",
      "value": 0.04477611940298507,
      "lo": 0.0,
      "hi": 0.08695652173913043,
      "in_envelope": true
    },
    {
      "name": "contraction_ratio",
      "value": 1.0,
      "lo": 0.0,
      "hi": 0.7307692307692307,
      "in_envelope": false
    },
    {
      "name": "bullet_parallelism",
      "value": 0.75,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.9705882352941178,
      "lo": 1.1640625,
      "hi": 3.5384615384615383,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.6090210675553185,
      "lo": 0.38580860691983426,
      "hi": 0.7953949089757174,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 4.244482173174872,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 3.4199726402188784,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.08955223880597014,
      "lo": 0.0,
      "hi": 0.023076923076923078,
      "in_envelope": false
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.009259259259259259,
      "in_envelope": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.029411764705882353,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": false
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 35.33190578158458,
      "lo": 0.922509225092251,
      "hi": 19.31200965600483,
      "in_envelope": false
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 4.282655246252677,
      "lo": 11.149228130360205,
      "hi": 39.260969976905315,
      "in_envelope": false
    },
    {
      "name": "heading_density",
      "value": 1.0706638115631693,
      "lo": 0.607164541590771,
      "hi": 10.36682615629984,
      "in_envelope": true
    },
    {
      "name": "list_item_density",
      "value": 4.282655246252677,
      "lo": 0.0,
      "hi": 16.82439537329127,
      "in_envelope": true
    },
    {
      "name": "bold_span_density",
      "value": 10.70663811563169,
      "lo": 0.0,
      "hi": 10.668163952835485,
      "in_envelope": false
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.030303030303030304,
      "lo": 0.006711409395973154,
      "hi": 0.13432835820895522,
      "in_envelope": true
    },
    {
      "name": "top_opener_concentration",
      "value": 0.203125,
      "lo": 0.058823529411764705,
      "hi": 0.2153846153846154,
      "in_envelope": true
    }
  ],
  "spans": [
    {
      "channel": "literal",
      "frame_id": "span.simply",
      "start": 4027,
      "end": 4033,
      "line": 29,
      "column": 197,
      "score": null
    },
    {
      "channel": "literal",
      "frame_id": "sub.leverage_base",
      "start": 5263,
      "end": 5271,
      "line": 42,
      "column": 5,
      "score": null
    },
    {
      "channel": "dms",
      "frame_id": "dms.qwen",
      "start": 5725,
      "end": 5751,
      "line": 43,
      "column": 197,
      "score": 6
    }
  ],
  "tell_counts": {
    "dms": 1,
    "span": 1,
    "sub": 1
  },
  "dms": [
    {
      "family": "qwen",
      "mean_machine": 1.3062622309197651,
      "mean_human": 1.5587084148727985,
      "differential": -0.2524461839530334,
      "token_count": 1022
    },
    {
      "family": "gemma",
      "mean_machine": 27.7426614481409,
      "mean_human": 1.5587084148727985,
      "differential": 26.183953033268104,
      "token_count": 1022
    },
    {
      "family": "llama",
      "mean_machine": 1.4158512720156555,
      "mean_human": 1.5587084148727985,
      "differential": -0.14285714285714302,
      "token_count": 1022
    },
    {
      "family": "granite",
      "mean_machine": 1.1966731898238747,
      "mean_human": 1.5587084148727985,
      "differential": -0.3620352250489238,
      "token_count": 1022
    }
  ]
}
