crates/friction-cli/tests/snapshots/snapshot__check_json__docs_human_01ec8967989205a2.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "docs",
  "family": "qwen",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 9.672131147540984,
      "lo": 5.079601990049751,
      "hi": 11.36986301369863,
      "in_envelope": true
    },
    {
      "name": "sentence_length_stddev",
      "value": 9.688122373831852,
      "lo": 4.841157658992773,
      "hi": 9.53557474351129,
      "in_envelope": false
    },
    {
      "name": "sentence_length_cv",
      "value": 1.0016533301758355,
      "lo": 0.6938000297364706,
      "hi": 1.1063157464161906,
      "in_envelope": true
    },
    {
      "name": "discourse_marker_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 3.076923076923077,
      "in_envelope": true
    },
    {
      "name": "triad_rate",
      "value": 0.03278688524590164,
      "lo": 0.0,
      "hi": 0.030303030303030304,
      "in_envelope": false
    },
    {
      "name": "contraction_ratio",
      "value": 0.625,
      "lo": 0.0,
      "hi": 0.6666666666666666,
      "in_envelope": true
    },
    {
      "name": "bullet_parallelism",
      "value": 0.0,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.4523809523809523,
      "lo": 1.0970149253731343,
      "hi": 1.509433962264151,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.4557848778510767,
      "lo": 0.28827503026587703,
      "hi": 0.7259662712736925,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 1.694915254237288,
      "lo": 0.0,
      "hi": 3.5335689045936394,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.018518518518518517,
      "in_envelope": true
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 5.172413793103448,
      "lo": 0.0,
      "hi": 17.89709172259508,
      "in_envelope": true
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 48.275862068965516,
      "lo": 12.599160055996267,
      "hi": 43.890865954922894,
      "in_envelope": false
    },
    {
      "name": "heading_density",
      "value": 5.172413793103448,
      "lo": 2.3094688221709005,
      "hi": 14.9812734082397,
      "in_envelope": true
    },
    {
      "name": "list_item_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 31.62486368593239,
      "in_envelope": true
    },
    {
      "name": "bold_span_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 14.176663031624864,
      "in_envelope": true
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.016666666666666666,
      "lo": 0.0,
      "hi": 0.06557377049180328,
      "in_envelope": true
    },
    {
      "name": "top_opener_concentration",
      "value": 0.09615384615384616,
      "lo": 0.05454545454545454,
      "hi": 0.16129032258064516,
      "in_envelope": true
    }
  ],
  "spans": [],
  "tell_counts": {},
  "dms": [
    {
      "family": "qwen",
      "mean_machine": 1.224188790560472,
      "mean_human": 22.532448377581122,
      "differential": -21.30825958702065,
      "token_count": 678
    },
    {
      "family": "gemma",
      "mean_machine": 1.3805309734513274,
      "mean_human": 22.532448377581122,
      "differential": -21.151917404129794,
      "token_count": 678
    },
    {
      "family": "llama",
      "mean_machine": 1.294985250737463,
      "mean_human": 22.532448377581122,
      "differential": -21.23746312684366,
      "token_count": 678
    },
    {
      "family": "granite",
      "mean_machine": 1.2345132743362832,
      "mean_human": 22.532448377581122,
      "differential": -21.29793510324484,
      "token_count": 678
    }
  ]
}
