crates/friction-cli/tests/snapshots/snapshot__check_json__docs_human_08d07d7b04ccd440.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 8.761904761904763,
      "lo": 3.4918032786885247,
      "hi": 22.612244897959183,
      "in_envelope": true
    },
    {
      "name": "sentence_length_stddev",
      "value": 7.615177588554021,
      "lo": 3.4227587963188086,
      "hi": 13.411800359716398,
      "in_envelope": true
    },
    {
      "name": "sentence_length_cv",
      "value": 0.8691235291284479,
      "lo": 0.49754649007902846,
      "hi": 1.3591689344136941,
      "in_envelope": true
    },
    {
      "name": "discourse_marker_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 4.237288135593221,
      "in_envelope": true
    },
    {
      "name": "triad_rate",
      "value": 0.09523809523809523,
      "lo": 0.0,
      "hi": 0.08695652173913043,
      "in_envelope": false
    },
    {
      "name": "contraction_ratio",
      "value": 0.6666666666666666,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "bullet_parallelism",
      "value": 0.0,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.2,
      "lo": 1.0357142857142858,
      "hi": 3.5384615384615383,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.33333333333333337,
      "lo": 0.179177669748504,
      "hi": 0.7953949089757174,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 4.244482173174872,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 3.9682539682539684,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.03125,
      "in_envelope": true
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.009259259259259259,
      "in_envelope": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 8.19672131147541,
      "lo": 0.0,
      "hi": 21.634615384615383,
      "in_envelope": true
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 21.85792349726776,
      "lo": 8.59106529209622,
      "hi": 48.821548821548824,
      "in_envelope": true
    },
    {
      "name": "heading_density",
      "value": 8.19672131147541,
      "lo": 0.0,
      "hi": 43.04635761589404,
      "in_envelope": true
    },
    {
      "name": "list_item_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 98.26589595375722,
      "in_envelope": true
    },
    {
      "name": "bold_span_density",
      "value": 8.19672131147541,
      "lo": 0.0,
      "hi": 14.705882352941176,
      "in_envelope": true
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.13793103448275862,
      "in_envelope": true
    },
    {
      "name": "top_opener_concentration",
      "value": 0.1,
      "lo": 0.04424778761061947,
      "hi": 0.2153846153846154,
      "in_envelope": true
    }
  ],
  "spans": [],
  "tell_counts": {},
  "dms": {
    "mean_machine": 1.6290726817042607,
    "mean_human": 13.353383458646617,
    "differential": -11.724310776942357,
    "token_count": 399
  }
}
